; ModuleID = '/home/carl/AnghaBench/php-src/ext/pdo_sqlite/extr_sqlite_driver.c_pdo_sqlite_get_attribute.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/pdo_sqlite/extr_sqlite_driver.c_pdo_sqlite_get_attribute.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32*)* @pdo_sqlite_get_attribute to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pdo_sqlite_get_attribute(i32* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %8 = load i32, i32* %6, align 4
  switch i32 %8, label %14 [
    i32 129, label %9
    i32 128, label %9
  ]

9:                                                ; preds = %3, %3
  %10 = load i32*, i32** %7, align 8
  %11 = call i64 (...) @sqlite3_libversion()
  %12 = inttoptr i64 %11 to i8*
  %13 = call i32 @ZVAL_STRING(i32* %10, i8* %12)
  br label %15

14:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %16

15:                                               ; preds = %9
  store i32 1, i32* %4, align 4
  br label %16

16:                                               ; preds = %15, %14
  %17 = load i32, i32* %4, align 4
  ret i32 %17
}

declare dso_local i32 @ZVAL_STRING(i32*, i8*) #1

declare dso_local i64 @sqlite3_libversion(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
